Bug 451753: Comment areas too small with the Dusk skin

--- a/skins/custom/global.css
+++ b/skins/custom/global.css
@@ -51,10 +51,6 @@ pre
     font-size: medium;
 }
 
-.bz_comment {
-	width: 50em;
-}
-
 .bz_comment_head {
 	padding: 2px 1em;
 }
